--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/obla?useSSL=true
 spring.datasource.username = root
-spring.datasource.password = feeham
+spring.datasource.password =
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = create
-spring.jpa.show-sql = true
+#spring.jpa.show-sql = true
