--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/obla?useSSL=true
-spring.datasource.username = root
-spring.datasource.password =
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto = create
+server.port = 8080
+
+spring.datasource.url = jdbc:sqlserver://feehams-ms-sql-server.database.windows.net:1433;database=obla;characterEncoding=UTF-8;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;
+spring.datasource.username = feeham@feehams-ms-sql-server
+spring.datasource.password = 68426623Ma
+spring.datasource.driverClassName = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
